# masterclass_p1cp1

my_rb1_description/: CMakeLists.txt  package.xml
my_rb1_description/config/: display.rviz
my_rb1_description/launch/: display.launch  gztest.launch
my_rb1_description/urdf/: my_rb1_robot.urdf
my_rb1_gazebo/: CMakeLists.txt  package.xml
my_rb1_gazebo/launch/: my_rb1_robot_warehouse.launch
my_rb1_ros/: CMakeLists.txt  package.xml
my_rb1_ros/launch/: rotate_service.launch
my_rb1_ros/scripts/: rotate_service.py
